# apm32-ceedling-example

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
application/config/Include/: apm32f4xx_dal_cfg.h  apm32f4xx_device_cfg.h  apm32f4xx_gpio_cfg.h  apm32f4xx_nvic_cfg.h  apm32f4xx_rcm_cfg.h
application/config/Source/: apm32f4xx_device_cfg.c  apm32f4xx_gpio_cfg.c  apm32f4xx_nvic_cfg.c  apm32f4xx_rcm_cfg.c
application/include/: apm32f4xx_int.h  main.h
application/source/: apm32f4xx_int.c  main.c  system_apm32f4xx.c
cmake/: apm32-dal.cmake  gcc-arm-none-eabi.cmake
driver/APM32F4xx_DAL_Driver/Include/: apm32_assert_template.h  apm32f4xx_dal_cfg_template.h  apm32f4xx_dal_tmr.h
driver/APM32F4xx_DAL_Driver/Source/: apm32f4xx_dal_adc_ex.c  apm32f4xx_dal_tmr.c  apm32f4xx_ddl_adc.c  apm32f4xx_ddl_comp.c  apm32f4xx_ddl_crc.c  apm32f4xx_ddl_dac.c  apm32f4xx_ddl_dma.c  apm32f4xx_ddl_eint.c  apm32f4xx_ddl_gpio.c  apm32f4xx_ddl_i2c.c  apm32f4xx_ddl_rcm.c  apm32f4xx_ddl_rng.c  apm32f4xx_ddl_rtc.c  apm32f4xx_ddl_spi.c  apm32f4xx_ddl_tmr.c  apm32f4xx_ddl_usart.c  apm32f4xx_ddl_utils.c
driver/Device/Geehy/APM32F4xx/Include/: system_apm32f4xx.h
svd/: APM32F40x.svd  APM32F411.svd  APM32F41x.svd  APM32F465.svd
test/: CMakeLists.txt  project.yml
test/src/: main.c  main.h
test/test/: test_assert.c  test_calculator.c  test_gpio.c
test/test/support/: calculator.c  calculator.h
